# QuestionAnswer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
config/: settings.py  urls.py
survey/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
survey/migrations/: 0001_initial.py  0002_alter_answer_question_id_alter_answer_user_id.py
